// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requires a pie to be present 1`] = `
Object {
  "body": "{\\"title\\":\\"Not Found\\",\\"detail\\":\\"Unable to find the specified mince pie.\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": "*",
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/problem+json",
  },
  "statusCode": 404,
}
`;

exports[`requires an authenticated user 1`] = `
Object {
  "body": "{\\"title\\":\\"Forbidden\\",\\"detail\\":\\"Service requires authenticated user\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": "*",
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/problem+json",
  },
  "statusCode": 403,
}
`;

exports[`requires the user to own the pie 1`] = `
Object {
  "body": "{\\"title\\":\\"Unauthorized\\",\\"detail\\":\\"This mince pie does not belong to you.\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": "*",
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/problem+json",
  },
  "statusCode": 401,
}
`;
